--- a/css/main7.css
+++ b/css/main7.css
@@ -96,7 +96,7 @@ textarea {
    ========================================================================== */
 .custom{
  color:#000;
-    background-color: rgba(98 124 124) !important;
+    background-color:#172121 !important;
  border: none;
     padding:10px;
 
