--- a/css/main7.css
+++ b/css/main7.css
@@ -96,7 +96,7 @@ textarea {
    ========================================================================== */
 .custom{
  color:#000;
-    background-color:#559696 !important;
+    background-color:#b97f7f !important;
  border: none;
     padding:10px;
 
