--- a/css/main7.css
+++ b/css/main7.css
@@ -96,7 +96,7 @@ textarea {
    ========================================================================== */
 .custom{
  color:#000;
-    background-color:#7c8f8f !important;
+    background-color:#3f4e4b !important;
  border: none;
     padding:10px;
 
