--- a/css/main7.css
+++ b/css/main7.css
@@ -364,7 +364,7 @@ font-size:18px;}
 }
 .carousel-container2{
 
-    background-color: white;
+    background-color: #c5f1e8;
 
     
 }.cstm2{padding:170px;}
