--- a/css/main7.css
+++ b/css/main7.css
@@ -392,7 +392,7 @@ font-size:18px;}
     padding:100px;
     margin-bottom: 20px;
     margin-top:30px;
-    background-color: #f5f5f5;
+    background-color: #c5f1e8;
 }
 .text-muted{
     color:#f5f5f5;
@@ -413,7 +413,7 @@ font-size:18px;}
 }
 .icon-color{color:#36d7b7;}
 .custom4{
-    background-color: #f5f5f5;
+    background-color: #c5f1e8;
     width:100%;
     margin-right: 0px ;
     margin-left:0px;
