--- a/css/main7.css
+++ b/css/main7.css
@@ -615,7 +615,7 @@ margin-top:0px;
     z-index:999999;
     top: 0;
     left: 0;
-    background-color: #f5f5f5;
+    background-color: #2f4f4f;
     overflow-x: hidden;
     transition: 0.6s;
     padding-top: 60px;
